# search-people

./: .env.example  CLAUDE.md  Dockerfile  pyproject.toml  railway.json  requirements.txt  test_all.py
scripts/: import_csv.py
src/: agent_runtime.py  apollo_client.py  auth.py  config.py  local_search.py  main.py  param_refiner.py  pdl_client.py  query_parser.py  result_processor.py  supabase_client.py  tools.py  web.py
static/: index.html  login.html
